libsql-sys/bindings.rs

pub const SQLITE_CREATE_TRIGGER: u32 = 7;
pub const SQLITE_CREATE_VIEW: u32 = 8;
pub const SQLITE_DELETE: u32 = 9;
pub const SQLITE_DROP_INDEX: u32 = 10;
pub const SQLITE_DROP_TABLE: u32 = 11;
pub const SQLITE_DROP_TEMP_INDEX: u32 = 12;
pub const SQLITE_DROP_TEMP_TABLE: u32 = 13;
pub const SQLITE_DROP_TEMP_TRIGGER: u32 = 14;
pub const SQLITE_DROP_TEMP_VIEW: u32 = 15;
pub const SQLITE_DROP_TRIGGER: u32 = 16;
pub const SQLITE_DROP_VIEW: u32 = 17;
pub const SQLITE_INSERT: u32 = 18;
pub const SQLITE_PRAGMA: u32 = 19;
pub const SQLITE_READ: u32 = 20;
pub const SQLITE_SELECT: u32 = 21;
pub const SQLITE_TRANSACTION: u32 = 22;
pub const SQLITE_UPDATE: u32 = 23;
pub const SQLITE_ATTACH: u32 = 24;
pub const SQLITE_DETACH: u32 = 25;
pub const SQLITE_ALTER_TABLE: u32 = 26;
pub const SQLITE_REINDEX: u32 = 27;
pub const SQLITE_ANALYZE: u32 = 28;
pub const SQLITE_CREATE_VTABLE: u32 = 29;
pub const SQLITE_DROP_VTABLE: u32 = 30;
pub const SQLITE_FUNCTION: u32 = 31;
pub const SQLITE_SAVEPOINT: u32 = 32;
pub const SQLITE_COPY: u32 = 0;
pub const SQLITE_RECURSIVE: u32 = 33;
pub const SQLITE_TRACE_STMT: u32 = 1;
pub const SQLITE_TRACE_PROFILE: u32 = 2;
pub const SQLITE_TRACE_ROW: u32 = 4;
pub const SQLITE_TRACE_CLOSE: u32 = 8;
pub const SQLITE_LIMIT_LENGTH: u32 = 0;
pub const SQLITE_LIMIT_SQL_LENGTH: u32 = 1;
pub const SQLITE_LIMIT_COLUMN: u32 = 2;
pub const SQLITE_LIMIT_EXPR_DEPTH: u32 = 3;
pub const SQLITE_LIMIT_COMPOUND_SELECT: u32 = 4;
pub const SQLITE_LIMIT_VDBE_OP: u32 = 5;
pub const SQLITE_LIMIT_FUNCTION_ARG: u32 = 6;
pub const SQLITE_LIMIT_ATTACHED: u32 = 7;
pub const SQLITE_LIMIT_LIKE_PATTERN_LENGTH: u32 = 8;
pub const SQLITE_LIMIT_VARIABLE_NUMBER: u32 = 9;
pub const SQLITE_LIMIT_TRIGGER_DEPTH: u32 = 10;
pub const SQLITE_LIMIT_WORKER_THREADS: u32 = 11;
pub const SQLITE_PREPARE_PERSISTENT: u32 = 1;
pub const SQLITE_PREPARE_NORMALIZE: u32 = 2;
pub const SQLITE_PREPARE_NO_VTAB: u32 = 4;
pub const SQLITE_INTEGER: u32 = 1;
pub const SQLITE_FLOAT: u32 = 2;
pub const SQLITE_BLOB: u32 = 4;
pub const SQLITE_NULL: u32 = 5;
pub const SQLITE_TEXT: u32 = 3;
pub const SQLITE3_TEXT: u32 = 3;
pub const SQLITE_UTF8: u32 = 1;
pub const SQLITE_UTF16LE: u32 = 2;
pub const SQLITE_UTF16BE: u32 = 3;
pub const SQLITE_UTF16: u32 = 4;
pub const SQLITE_ANY: u32 = 5;
pub const SQLITE_UTF16_ALIGNED: u32 = 8;
pub const SQLITE_DETERMINISTIC: u32 = 2048;
pub const SQLITE_DIRECTONLY: u32 = 524288;
pub const SQLITE_SUBTYPE: u32 = 1048576;
pub const SQLITE_INNOCUOUS: u32 = 2097152;
pub const SQLITE_WIN32_DATA_DIRECTORY_TYPE: u32 = 1;
pub const SQLITE_WIN32_TEMP_DIRECTORY_TYPE: u32 = 2;
pub const SQLITE_TXN_NONE: u32 = 0;
pub const SQLITE_TXN_READ: u32 = 1;
pub const SQLITE_TXN_WRITE: u32 = 2;
pub const SQLITE_INDEX_SCAN_UNIQUE: u32 = 1;
pub const SQLITE_INDEX_CONSTRAINT_EQ: u32 = 2;
pub const SQLITE_INDEX_CONSTRAINT_GT: u32 = 4;
pub const SQLITE_INDEX_CONSTRAINT_LE: u32 = 8;
pub const SQLITE_INDEX_CONSTRAINT_LT: u32 = 16;
pub const SQLITE_INDEX_CONSTRAINT_GE: u32 = 32;
pub const SQLITE_INDEX_CONSTRAINT_MATCH: u32 = 64;
pub const SQLITE_INDEX_CONSTRAINT_LIKE: u32 = 65;
pub const SQLITE_INDEX_CONSTRAINT_GLOB: u32 = 66;
pub const SQLITE_INDEX_CONSTRAINT_REGEXP: u32 = 67;
pub const SQLITE_INDEX_CONSTRAINT_NE: u32 = 68;
pub const SQLITE_INDEX_CONSTRAINT_ISNOT: u32 = 69;
pub const SQLITE_INDEX_CONSTRAINT_ISNOTNULL: u32 = 70;
pub const SQLITE_INDEX_CONSTRAINT_ISNULL: u32 = 71;
pub const SQLITE_INDEX_CONSTRAINT_IS: u32 = 72;
pub const SQLITE_INDEX_CONSTRAINT_LIMIT: u32 = 73;
pub const SQLITE_INDEX_CONSTRAINT_OFFSET: u32 = 74;
pub const SQLITE_INDEX_CONSTRAINT_FUNCTION: u32 = 150;
pub const SQLITE_MUTEX_FAST: u32 = 0;
pub const SQLITE_MUTEX_RECURSIVE: u32 = 1;
pub const SQLITE_MUTEX_STATIC_MAIN: u32 = 2;
pub const SQLITE_MUTEX_STATIC_MEM: u32 = 3;
pub const SQLITE_MUTEX_STATIC_MEM2: u32 = 4;
pub const SQLITE_MUTEX_STATIC_OPEN: u32 = 4;
pub const SQLITE_MUTEX_STATIC_PRNG: u32 = 5;
pub const SQLITE_MUTEX_STATIC_LRU: u32 = 6;
pub const SQLITE_MUTEX_STATIC_LRU2: u32 = 7;
pub const SQLITE_MUTEX_STATIC_PMEM: u32 = 7;
pub const SQLITE_MUTEX_STATIC_APP1: u32 = 8;
pub const SQLITE_MUTEX_STATIC_APP2: u32 = 9;
pub const SQLITE_MUTEX_STATIC_APP3: u32 = 10;
pub const SQLITE_MUTEX_STATIC_VFS1: u32 = 11;
pub const SQLITE_MUTEX_STATIC_VFS2: u32 = 12;
pub const SQLITE_MUTEX_STATIC_VFS3: u32 = 13;
pub const SQLITE_MUTEX_STATIC_MASTER: u32 = 2;
pub const SQLITE_TESTCTRL_FIRST: u32 = 5;
pub const SQLITE_TESTCTRL_PRNG_SAVE: u32 = 5;
pub const SQLITE_TESTCTRL_PRNG_RESTORE: u32 = 6;
pub const SQLITE_TESTCTRL_PRNG_RESET: u32 = 7;
pub const SQLITE_TESTCTRL_BITVEC_TEST: u32 = 8;
pub const SQLITE_TESTCTRL_FAULT_INSTALL: u32 = 9;
pub const SQLITE_TESTCTRL_BENIGN_MALLOC_HOOKS: u32 = 10;
pub const SQLITE_TESTCTRL_PENDING_BYTE: u32 = 11;
pub const SQLITE_TESTCTRL_ASSERT: u32 = 12;
pub const SQLITE_TESTCTRL_ALWAYS: u32 = 13;
pub const SQLITE_TESTCTRL_RESERVE: u32 = 14;
pub const SQLITE_TESTCTRL_OPTIMIZATIONS: u32 = 15;
pub const SQLITE_TESTCTRL_ISKEYWORD: u32 = 16;
pub const SQLITE_TESTCTRL_SCRATCHMALLOC: u32 = 17;
pub const SQLITE_TESTCTRL_INTERNAL_FUNCTIONS: u32 = 17;
pub const SQLITE_TESTCTRL_LOCALTIME_FAULT: u32 = 18;
pub const SQLITE_TESTCTRL_EXPLAIN_STMT: u32 = 19;
pub const SQLITE_TESTCTRL_ONCE_RESET_THRESHOLD: u32 = 19;
pub const SQLITE_TESTCTRL_NEVER_CORRUPT: u32 = 20;
pub const SQLITE_TESTCTRL_VDBE_COVERAGE: u32 = 21;
pub const SQLITE_TESTCTRL_BYTEORDER: u32 = 22;
pub const SQLITE_TESTCTRL_ISINIT: u32 = 23;
pub const SQLITE_TESTCTRL_SORTER_MMAP: u32 = 24;
pub const SQLITE_TESTCTRL_IMPOSTER: u32 = 25;
pub const SQLITE_TESTCTRL_PARSER_COVERAGE: u32 = 26;
pub const SQLITE_TESTCTRL_RESULT_INTREAL: u32 = 27;
pub const SQLITE_TESTCTRL_PRNG_SEED: u32 = 28;
pub const SQLITE_TESTCTRL_EXTRA_SCHEMA_CHECKS: u32 = 29;
pub const SQLITE_TESTCTRL_SEEK_COUNT: u32 = 30;
pub const SQLITE_TESTCTRL_TRACEFLAGS: u32 = 31;
pub const SQLITE_TESTCTRL_TUNE: u32 = 32;
pub const SQLITE_TESTCTRL_LOGEST: u32 = 33;
pub const SQLITE_TESTCTRL_LAST: u32 = 33;
pub const SQLITE_STATUS_MEMORY_USED: u32 = 0;
pub const SQLITE_STATUS_PAGECACHE_USED: u32 = 1;
pub const SQLITE_STATUS_PAGECACHE_OVERFLOW: u32 = 2;
pub const SQLITE_STATUS_SCRATCH_USED: u32 = 3;
pub const SQLITE_STATUS_SCRATCH_OVERFLOW: u32 = 4;
pub const SQLITE_STATUS_MALLOC_SIZE: u32 = 5;
pub const SQLITE_STATUS_PARSER_STACK: u32 = 6;
pub const SQLITE_STATUS_PAGECACHE_SIZE: u32 = 7;
pub const SQLITE_STATUS_SCRATCH_SIZE: u32 = 8;
pub const SQLITE_STATUS_MALLOC_COUNT: u32 = 9;
pub const SQLITE_DBSTATUS_LOOKASIDE_USED: u32 = 0;
pub const SQLITE_DBSTATUS_CACHE_USED: u32 = 1;
pub const SQLITE_DBSTATUS_SCHEMA_USED: u32 = 2;
pub const SQLITE_DBSTATUS_STMT_USED: u32 = 3;
pub const SQLITE_DBSTATUS_LOOKASIDE_HIT: u32 = 4;
pub const SQLITE_DBSTATUS_LOOKASIDE_MISS_SIZE: u32 = 5;
pub const SQLITE_DBSTATUS_LOOKASIDE_MISS_FULL: u32 = 6;
pub const SQLITE_DBSTATUS_CACHE_HIT: u32 = 7;
pub const SQLITE_DBSTATUS_CACHE_MISS: u32 = 8;
pub const SQLITE_DBSTATUS_CACHE_WRITE: u32 = 9;
pub const SQLITE_DBSTATUS_DEFERRED_FKS: u32 = 10;
pub const SQLITE_DBSTATUS_CACHE_USED_SHARED: u32 = 11;
pub const SQLITE_DBSTATUS_CACHE_SPILL: u32 = 12;
pub const SQLITE_DBSTATUS_MAX: u32 = 12;
pub const SQLITE_STMTSTATUS_FULLSCAN_STEP: u32 = 1;
pub const SQLITE_STMTSTATUS_SORT: u32 = 2;
pub const SQLITE_STMTSTATUS_AUTOINDEX: u32 = 3;
pub const SQLITE_STMTSTATUS_VM_STEP: u32 = 4;
pub const SQLITE_STMTSTATUS_REPREPARE: u32 = 5;
pub const SQLITE_STMTSTATUS_RUN: u32 = 6;
pub const SQLITE_STMTSTATUS_FILTER_MISS: u32 = 7;
pub const SQLITE_STMTSTATUS_FILTER_HIT: u32 = 8;
pub const SQLITE_STMTSTATUS_MEMUSED: u32 = 99;
pub const LIBSQL_STMTSTATUS_BASE: u32 = 1024;
pub const LIBSQL_STMTSTATUS_ROWS_READ: u32 = 1025;
pub const LIBSQL_STMTSTATUS_ROWS_WRITTEN: u32 = 1026;
pub const SQLITE_CHECKPOINT_PASSIVE: u32 = 0;
pub const SQLITE_CHECKPOINT_FULL: u32 = 1;
pub const SQLITE_CHECKPOINT_RESTART: u32 = 2;
pub const SQLITE_CHECKPOINT_TRUNCATE: u32 = 3;
pub const SQLITE_VTAB_CONSTRAINT_SUPPORT: u32 = 1;
pub const SQLITE_VTAB_INNOCUOUS: u32 = 2;
pub const SQLITE_VTAB_DIRECTONLY: u32 = 3;
pub const SQLITE_VTAB_USES_ALL_SCHEMAS: u32 = 4;
pub const SQLITE_ROLLBACK: u32 = 1;
pub const SQLITE_FAIL: u32 = 3;
pub const SQLITE_REPLACE: u32 = 5;
pub const SQLITE_SCANSTAT_NLOOP: u32 = 0;
pub const SQLITE_SCANSTAT_NVISIT: u32 = 1;
pub const SQLITE_SCANSTAT_EST: u32 = 2;
pub const SQLITE_SCANSTAT_NAME: u32 = 3;
pub const SQLITE_SCANSTAT_EXPLAIN: u32 = 4;
pub const SQLITE_SCANSTAT_SELECTID: u32 = 5;
pub const SQLITE_SCANSTAT_PARENTID: u32 = 6;
pub const SQLITE_SCANSTAT_NCYCLE: u32 = 7;
pub const SQLITE_SCANSTAT_COMPLEX: u32 = 1;
pub const SQLITE_SERIALIZE_NOCOPY: u32 = 1;
pub const SQLITE_DESERIALIZE_FREEONCLOSE: u32 = 1;
pub const SQLITE_DESERIALIZE_RESIZEABLE: u32 = 2;
pub const SQLITE_DESERIALIZE_READONLY: u32 = 4;
pub const NOT_WITHIN: u32 = 0;
pub const PARTLY_WITHIN: u32 = 1;
pub const FULLY_WITHIN: u32 = 2;
pub const FTS5_TOKENIZE_QUERY: u32 = 1;
pub const FTS5_TOKENIZE_PREFIX: u32 = 2;
pub const FTS5_TOKENIZE_DOCUMENT: u32 = 4;
pub const FTS5_TOKENIZE_AUX: u32 = 8;
pub const FTS5_TOKEN_COLOCATED: u32 = 1;
pub const WAL_SAVEPOINT_NDATA: u32 = 4;
pub type va_list = __builtin_va_list;
pub type __gnuc_va_list = __builtin_va_list;
extern "C" {
    pub static sqlite3_version: [::std::os::raw::c_char; 0usize];
}
extern "C" {
    pub fn sqlite3_libversion() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn sqlite3_sourceid() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn sqlite3_libversion_number() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn libsql_libversion() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn sqlite3_compileoption_used(
        zOptName: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sqlite3_compileoption_get(N: ::std::os::raw::c_int) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn sqlite3_threadsafe() -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3 {
    _unused: [u8; 0],
}
pub type sqlite_int64 = ::std::os::raw::c_longlong;
pub type sqlite_uint64 = ::std::os::raw::c_ulonglong;
pub type sqlite3_int64 = sqlite_int64;
pub type sqlite3_uint64 = sqlite_uint64;
extern "C" {
    pub fn sqlite3_close(arg1: *mut sqlite3) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sqlite3_close_v2(arg1: *mut sqlite3) -> ::std::os::raw::c_int;
}
pub type sqlite3_callback = ::std::option::Option<
    unsafe extern "C" fn(
        arg1: *mut ::std::os::raw::c_void,
        arg2: ::std::os::raw::c_int,
        arg3: *mut *mut ::std::os::raw::c_char,
        arg4: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int,
>;
extern "C" {
    pub fn sqlite3_exec(
        arg1: *mut sqlite3,
        sql: *const ::std::os::raw::c_char,
        callback: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
                arg2: ::std::os::raw::c_int,
                arg3: *mut *mut ::std::os::raw::c_char,
                arg4: *mut *mut ::std::os::raw::c_char,
            ) -> ::std::os::raw::c_int,
        >,
        arg2: *mut ::std::os::raw::c_void,
        errmsg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_file {
    pub pMethods: *const sqlite3_io_methods,
}
